# 2020-vision

./: .gitignore  Cargo.toml  config.json  params.json
install/: 4904_vision.service  4904_webcam.rules  install.sh  vision.service  webcam.rules
sample_images/: metadata.json
src/: analysis.rs  aruco.rs  chessboard.rs  control_panel.rs  extraction.rs  filter.rs  lib.rs  main.rs  pipeline.rs  udp.rs
stuff/: config.json  params.json
