[package]
name = "vision-2020"
version = "0.1.0"
authors = []
edition = "2018"
default-run = "main"

[[bin]]
name = "main"
path = "src/main.rs"

[features]
opencl = []

[dependencies]
anyhow = "1.0"
global-robot-localization = { git = "https://github.com/RoboticsTeam4904/global-robot-localization" }
nalgebra = "0.18"
ndarray = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
rand_distr = "0.2"
stdvis-core = { git = "https://github.com/RoboticsTeam4904/standard-vision" }
stdvis-opencv = { git = "https://github.com/RoboticsTeam4904/standard-vision" }

[target.'cfg(linux)'.dependencies]
opencv = { version = "0.30", default-features = false, features = ["opencv-4", "contrib"] }

[target.'cfg(not(linux))'.dependencies]
opencv = { version = "0.30", default-features = false, features = ["opencv-4", "contrib", "buildtime-bindgen"] }
